--- a/app/views/appeal/before-you-start/aad/invalid-ref-error/check.html
+++ b/app/views/appeal/before-you-start/aad/invalid-ref-error/check.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-l">You can appeal using this service</h1>
+      <h1 class="govuk-heading-l">Your application details</h1>
 
       <p class="govuk-body">Based on the information you provided, you can appeal using this service.</p>
 
@@ -54,23 +54,6 @@
                   href: "#",
                   text: "Change",
                   visuallyHiddenText: "date of birth"
-                }
-              ]
-            }
-          },
-          {
-            key: {
-              text: "Have you received an enforcement notice?"
-            },
-            value: {
-              text: "No"
-            },
-            actions: {
-              items: [
-                {
-                  href: "#",
-                  text: "Change",
-                  visuallyHiddenText: "customer reference"
                 }
               ]
             }
