--- a/app/views/index.html
+++ b/app/views/index.html
@@ -186,8 +186,6 @@
       <h4 class="govuk-heading-s govuk-!-margin-bottom-2" id="rule-6">
         Rule 6 access
       </h4>
-
-      <p class="govuk-body">
         <ul class="govuk-list govuk-list--bullet">
           <li>
             <a href="/appeal/rule-6/v1/appeal-email?hub=">
@@ -205,10 +203,8 @@
             </a>
           </li>
         </ul>
-      </p>
 
-
-      <h4 class="govuk-heading-s govuk-!-margin-bottom-2" id="rule-6">
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2" id="rule-6-details">
         Rule 6 appeal details
       </h4>
 
@@ -276,6 +272,9 @@
           <a href="appeal/before-you-start/aad/partial-success/">Partially successful API call</a>
         </li>
         <li>
+          <a href="appeal/before-you-start/aad/application-not-found/">Failure – application not found</a>
+        </li>
+        <li>
           <a href="appeal/before-you-start/aad/invalid-ref-error/">Failure – invalid reference number</a>
         </li>
         <li>
@@ -338,6 +337,9 @@
         <li>
           <a href="manage/manage-users/">Manage users</a>
         </li>
+        <li>
+          <a href="manage/manage-users/v4/">Manage users with multiple domains</a>
+        </li>
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
@@ -393,9 +395,11 @@
               </a>
             </li>
           </ul>
+
           <h4 class="govuk-heading-s">
             Hearing
           </h4>
+
           <ul class="govuk-list govuk-list--bullet">
             <li>
               <a href="/manage/appeals/v9/appeal-details?appeal-type=hearing&questionnaire=&statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&case-conference-date=&inquiry-date=&proofs=&appellant-proofs=&timings=&other-timings=&socg=&hearing-date=&appeal-decided=">
@@ -631,10 +635,10 @@
       ]
     }) }}
 
-  </div>
+</div>
+</div>
 
-
-
+<div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
     <h2 class="govuk-heading-l">
@@ -655,7 +659,7 @@
     </h2>
 
     <p class="govuk-body">
-      The previous prototype is hosted in another place as it uses a differemt version of the prototype kit.
+      The previous prototype is hosted in another place as it uses a different version of the prototype kit.
     </p>
     <p class="govuk-body">
       <a href="https://appeals-prototype-archive.herokuapp.com/">View the archive</a>
