--- a/app/views/appeal/before-you-start/aad/successful/application-ref.html
+++ b/app/views/appeal/before-you-start/aad/successful/application-ref.html
@@ -14,7 +14,7 @@
           classes: "govuk-label--l"
         },
         hint: {
-          text: "You can find this on communications from your local planning department about your application"
+          text: "You can find this on communications from your local planning department about your application."
         },
         classes: "govuk-input--width-10",
         id: "appNumber",
