--- a/app/views/index.html
+++ b/app/views/index.html
@@ -340,6 +340,9 @@
         <li>
           <a href="manage/manage-users/v4/">Manage users with multiple domains</a>
         </li>
+        <li>
+          <a href="manage/appeals/search">Search functionality</a>
+        </li>
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
