index page updated

--- a/app/views/manage/appeals/search/filters-side/side-selected.html
+++ b/app/views/manage/appeals/search/filters-side/side-selected.html
@@ -218,7 +218,7 @@
 
                     </div>
                     <div style="padding-top:10px;">
-                        <a href="written-reps" class="govuk-link" style="font-weight:normal;">Clear all filters</a>
+                        <a href="side" class="govuk-link" style="font-weight:normal;">Clear all filters</a>
                     </div>
                 </div>
                     {# Size modifiers: xl, l, m #}
@@ -388,7 +388,7 @@
 
                     <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
 
-                    <a href="written-reps-selected" class="govuk-button">
+                    <a href="side-selected" class="govuk-button">
                         Apply filters
                     </a>
                 </div>
@@ -529,7 +529,7 @@
     display: flex;
     align-items: center;
 ">
-    <a href="written-reps" class="govuk-button govuk-button--secondary" style="margin:0;">
+    <a href="side" class="govuk-button govuk-button--secondary" style="margin:0;">
         No filters
     </a>
 </div>
