--- a/app/views/manage/appeals/search/filters-side/side.html
+++ b/app/views/manage/appeals/search/filters-side/side.html
@@ -291,7 +291,7 @@
 
                             <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
 
-                            <a href="written-reps-selected" class="govuk-button">
+                            <a href="side-selected" class="govuk-button">
                                 Apply filters
                             </a>
                         </div>
@@ -502,7 +502,7 @@
     display: flex;
     align-items: center;
 ">
-    <a href="written-reps-selected" class="govuk-button govuk-button--secondary" style="margin:0;">
+    <a href="side-selected" class="govuk-button govuk-button--secondary" style="margin:0;">
         Filters selected
     </a>
 </div>
