--- a/app/views/manage/appeals/search/filters-top/horizontal.html
+++ b/app/views/manage/appeals/search/filters-top/horizontal.html
@@ -5,6 +5,7 @@
 {% set pageName = "Home" %}
 
 {% block beforeContent %}
+
   {{ govukServiceNavigation({
     navigation: [
       {
@@ -273,7 +274,7 @@
                                             </form>
                                         </div>
                                     </details>
-                                    <a href="horizontal-selected" class="govuk-button" style="margin-bottom:0px; width:100%">
+                                    <a href="#" class="govuk-button" style="margin-bottom:0px; width:100%">
                                         Apply
                                     </a>
                                 </div>
