--- a/app/views/manage/appeals/search/filters-top/horizontal-selected-v2.html
+++ b/app/views/manage/appeals/search/filters-top/horizontal-selected-v2.html
@@ -302,152 +302,6 @@
                                   </strong></td>
                                   <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
                             </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345264
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
-                                <td class="govuk-table__cell">Planning</td>
-                                <td class="govuk-table__cell">29 September 2025</td>
-                                <td class="govuk-table__cell">3 days</td>
-                                  <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
-                                <td class="govuk-table__cell">Householder</td>
-                                <td class="govuk-table__cell"></td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
-                                    New
-                                  </strong></td>
-                                  <td class="govuk-table__cell"></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
-                                <td class="govuk-table__cell">Householder</td>
-                                <td class="govuk-table__cell">25 September 2025</td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
-                                    Overdue
-                                  </strong></td>
-                                  <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345264
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
-                                <td class="govuk-table__cell">Planning</td>
-                                <td class="govuk-table__cell">29 September 2025</td>
-                                <td class="govuk-table__cell">3 days</td>
-                                  <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
-                                <td class="govuk-table__cell">Householder</td>
-                                <td class="govuk-table__cell"></td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
-                                    New
-                                  </strong></td>
-                                  <td class="govuk-table__cell"></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
-                                <td class="govuk-table__cell">Householder</td>
-                                <td class="govuk-table__cell">25 September 2025</td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
-                                    Overdue
-                                  </strong></td>
-                                  <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345264
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
-                                <td class="govuk-table__cell">Planning</td>
-                                <td class="govuk-table__cell">29 September 2025</td>
-                                <td class="govuk-table__cell">3 days</td>
-                                  <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
-                                <td class="govuk-table__cell">Householder</td>
-                                <td class="govuk-table__cell"></td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
-                                    New
-                                  </strong></td>
-                                  <td class="govuk-table__cell"></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
-                                <td class="govuk-table__cell">Householder</td>
-                                <td class="govuk-table__cell">25 September 2025</td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
-                                    Overdue
-                                  </strong></td>
-                                  <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345264
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT</td>
-                                <td class="govuk-table__cell">Planning</td>
-                                <td class="govuk-table__cell">29 September 2025</td>
-                                <td class="govuk-table__cell">3 days</td>
-                                  <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
-                            </tr>
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">The Old Library, 2 Wheeler St, Cambridge CB2 3QB</td>
-                                <td class="govuk-table__cell">Householder</td>
-                                <td class="govuk-table__cell"></td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
-                                    New
-                                  </strong></td>
-                                  <td class="govuk-table__cell"></td>
-                            </tr>
                         </tbody>
                     </table>'
                 }
@@ -466,17 +320,10 @@
                             </tr>
                         </thead>
                         <tbody class="govuk-table__body">
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">Shelford Bottom, Heath Farm, Babraham Rd, Stapleford, Cambridge CB22 3AD</td>
-                                <td class="govuk-table__cell">S78</td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">
-                                    With case officer
-                                  </strong></td>
+                                <td class="govuk-table__cell">No results found.</td>
+                                <td class="govuk-table__cell"></td>
+                                <td class="govuk-table__cell"></td>
+                                <td class="govuk-table__cell"></td>
                             </tr>
                             
                         </tbody>
@@ -497,17 +344,13 @@
                             </tr>
                         </thead>
                         <tbody class="govuk-table__body">
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
-                                <td class="govuk-table__cell">28 September 2025</td>
-                                <td class="govuk-table__cell">S78</td>
-                            </tr>
-                        </tbody>
+                            <td class="govuk-table__cell">No results found.</td>
+                            <td class="govuk-table__cell"></td>
+                            <td class="govuk-table__cell"></td>
+                            <td class="govuk-table__cell"></td>
+                        </tr>
+                        
+                    </tbody>
                     </table>'
                 }
             },
@@ -526,20 +369,14 @@
                             </tr>
                         </thead>
                         <tbody class="govuk-table__body">
-                            <tr class="govuk-table__row">
-                                <th scope="row" class="govuk-table__header">
-                                    <a class="govuk-link" href="#">
-                                        1345301
-                                    </a>
-                                </th>
-                                <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
-                                <td class="govuk-table__cell">28 September 2025</td>
-                                <td class="govuk-table__cell">S78</td>
-                                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
-                                    Allowed in part
-                                  </strong></td>
-                            </tr>
-                        </tbody>
+                            <td class="govuk-table__cell">No results found.</td>
+                            <td class="govuk-table__cell"></td>
+                            <td class="govuk-table__cell"></td>
+                            <td class="govuk-table__cell"></td>
+                            <td class="govuk-table__cell"></td>
+                        </tr>
+                        
+                    </tbody>
                     </table>'
                 }
             }
