--- a/app/views/appeal/before-you-start/aad/index.html
+++ b/app/views/appeal/before-you-start/aad/index.html
@@ -8,19 +8,19 @@
 
   <ul class="govuk-list govuk-list--bullet">
     <li>
-      <a href="appeal/before-you-start/aad/successful/">Successful API call</a>
+      <a href="successful/">Successful API call</a>
     </li>
     <li>
-      <a href="appeal/before-you-start/aad/partial-success/">Partially successful API call</a>
+      <a href="partial-success/">Partially successful API call</a>
     </li>
     <li>
-      <a href="appeal/before-you-start/aad/application-not-found/">Failure – application not found</a>
+      <a href="application-not-found/">Failure – application not found</a>
     </li>
     <li>
-      <a href="appeal/before-you-start/aad/invalid-ref-error/">Failure – invalid reference number</a>
+      <a href="invalid-ref-error/">Failure – invalid reference number</a>
     </li>
     <li>
-      <a href="appeal/before-you-start/aad/api-error/">Failure – API error (timeout, server error, etc.)</a>
+      <a href="api-error/">Failure – API error (timeout, server error, etc.)</a>
     </li>
   </ul>
 
