xgov service navigation

--- a/app/views/manage/appeals/search/index.html
+++ b/app/views/manage/appeals/search/index.html
@@ -6,14 +6,17 @@
 
 <ul class="govuk-list govuk-list--bullet">
     <li>
-        <a href="search/filters-top/horizontal-v2.html">Horizontal search with tabs</a>
+        <a href="search/xgovnav/active">Search</a> with <a href="https://x-govuk.github.io/govuk-prototype-components/secondary-navigation/">xGov Secondary Navigation</a>
     </li>
     <li>
-        <a href="search/filters-top/horizontal">Horizontal search with service navigation</a>
+        <a href="search/filters-top/horizontal-v2">Search with tabs</a>
+    </li>
+    <li>
+        <a href="search/filters-top/horizontal">Search with service navigation</a>
     </li>
 
     <li>
-        <a href="search/filters-side/side">Side menu filtering</a>
+        <a href="search/filters-side/side">Side menu filtering and search UI</a>
     </li>
 </ul>
 
