--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,6 +36,9 @@
         <li>
           <a href="appeal/before-you-start/">Before you start</a>
         </li>
+          <li>
+            <a href="appeal/before-you-start/aad/">Before you start (appeals as data flows)</a>
+          </li>
         <li>
           <a href="appeal/save-and-return/">Save and return</a>
         </li>
@@ -265,16 +268,6 @@
           </li>
         </ul>'
       }) }}
-
-      <h3 class="govuk-heading-m">
-        Appeals as data
-      </h3>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          <a href="appeal/before-you-start/aad/">Before you start flows</a>
-        </li>
-      </ul>
 
     {% endset -%}
 
