--- a/app/views/manage/appeals/search/index.html
+++ b/app/views/manage/appeals/search/index.html
@@ -6,7 +6,7 @@
 
 <ul class="govuk-list govuk-list--bullet">
     <li>
-        <a href="search/xgovnav/active">Search</a> with <a href="https://x-govuk.github.io/govuk-prototype-components/secondary-navigation/">xGov Secondary Navigation</a>
+        <strong>MVP:</strong> <a href="search/xgovnav/active">Search</a> with <a href="https://x-govuk.github.io/govuk-prototype-components/secondary-navigation/">xGov Secondary Navigation</a>
     </li>
     <li>
         <a href="search/filters-top/horizontal-v2">Search with tabs</a>
