--- a/app/views/manage/appeals/search/xgovnav/wfr-search-applied.html
+++ b/app/views/manage/appeals/search/xgovnav/wfr-search-applied.html
@@ -80,7 +80,7 @@
                 </tr>
             </thead>
             <tbody class="govuk-table__body">
-                <td class="govuk-table__cell">No results found.</td>
+                <td class="govuk-table__cell">No results.</td>
                 <td class="govuk-table__cell"></td>
                 <td class="govuk-table__cell"></td>
                 <td class="govuk-table__cell"></td>
