--- a/app/views/manage/appeals/search/xgovnav/decided.html
+++ b/app/views/manage/appeals/search/xgovnav/decided.html
@@ -51,13 +51,13 @@
             {{ xGovukSecondaryNavigation({
                 visuallyHiddenTitle: "Secondary menu",
                 items: [{
-                text: "Active (12)",
+                text: "Active (31)",
                 href: "active"
                 }, {
                 text: "Waiting for review (8)",
                 href: "waiting-for-review"
                 }, {
-                text: "Decided (5)",
+                text: "Decided (53)",
                 href: "decided",
                 current: true
                 }, {
@@ -89,7 +89,7 @@
                         <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
                         <td class="govuk-table__cell">28 September 2025</td>
                         <td class="govuk-table__cell">S78</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">
                             Allowed in part
                           </strong></td>
                     </tr>
@@ -102,8 +102,21 @@
                         <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
                         <td class="govuk-table__cell">28 September 2025</td>
                         <td class="govuk-table__cell">S78</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
-                            Allowed in part
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+                            Invalid
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+                            Allowed
                           </strong></td>
                     </tr>
                     <tr class="govuk-table__row">
@@ -116,6 +129,32 @@
                         <td class="govuk-table__cell">28 September 2025</td>
                         <td class="govuk-table__cell">S78</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
+                            Dismissed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+                            Allowed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">
                             Allowed in part
                           </strong></td>
                     </tr>
@@ -128,8 +167,21 @@
                         <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
                         <td class="govuk-table__cell">28 September 2025</td>
                         <td class="govuk-table__cell">S78</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
-                            Allowed in part
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+                            Invalid
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+                            Allowed
                           </strong></td>
                     </tr>
                     <tr class="govuk-table__row">
@@ -142,11 +194,116 @@
                         <td class="govuk-table__cell">28 September 2025</td>
                         <td class="govuk-table__cell">S78</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
+                            Dismissed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+                            Allowed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">
                             Allowed in part
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+                            Invalid
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+                            Allowed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
+                            Dismissed
+                          </strong></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a class="govuk-link" href="#">
+                                1345301
+                            </a>
+                        </th>
+                        <td class="govuk-table__cell">	21A Sarson Way, Wiltshire, BA12 0FF</td>
+                        <td class="govuk-table__cell">28 September 2025</td>
+                        <td class="govuk-table__cell">S78</td>
+                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+                            Allowed
                           </strong></td>
                     </tr>
                 </tbody>
             </table>
+
+            {% from "govuk/components/pagination/macro.njk" import govukPagination %}
+
+{{ govukPagination({
+  next: {
+    href: "#"
+  },
+  items: [
+    {
+      number: 1,
+      current: true,
+      href: "#"
+    },
+    {
+      number: 2,
+      href: "#"
+    },
+    {
+      number: 3,
+      href: "#"
+    },
+    {
+      number: 4,
+      href: "#"
+    }
+  ]
+}) }}
 
         </div>
     </div>
