updates to AAD flows

--- a/app/views/appeal/before-you-start/aad/index.html
+++ b/app/views/appeal/before-you-start/aad/index.html
@@ -8,19 +8,22 @@
 
   <ul class="govuk-list govuk-list--bullet">
     <li>
-      <a href="successful/">Successful API call</a>
+      <a href="v2/successful/">Successful API call</a>
     </li>
     <li>
-      <a href="partial-success/">Partially successful API call</a>
+      <a href="v2/partial-success/">Partially successful API call</a>
     </li>
     <li>
-      <a href="application-not-found/">Failure – application not found</a>
+      <a href="v2/not-eligible/">Not eligible</a>
     </li>
     <li>
-      <a href="invalid-ref-error/">Failure – invalid reference number</a>
+      <a href="v2/application-not-found/">Failure – application not found</a>
     </li>
     <li>
-      <a href="api-error/">Failure – API error (timeout, server error, etc.)</a>
+      <a href="v2/invalid-ref-error/ref-error">Failure – invalid reference number</a>
+    </li>
+    <li>
+      <a href="v2/api-error/">Failure – API error (timeout, server error, etc.)</a>
     </li>
   </ul>
 
