--- a/app/views/appeal/before-you-start/aad/v2/api-error/loading.html
+++ b/app/views/appeal/before-you-start/aad/v2/api-error/loading.html
@@ -9,7 +9,7 @@
 <div class="hods-loading-spinner" role="status">
     <div class="hods-loading-spinner__spinner"></div>
     <div class="hods-loading-spinner__content">
-      <h1 class="govuk-heading-m">Loading...</h1>
+      <h1 class="govuk-heading-m">Retrieving application details...</h1>
     </div>
   </div>
 
@@ -19,7 +19,7 @@
       // Wait 2.5 seconds (2500ms)
       setTimeout(() => {
         // Redirect to check.html
-        window.location.href = "check.html";
+        window.location.href = "api-error";
       }, 1000);
     });
   </script>
