new enforcement appeals

--- a/app/views/appeal/enforcement/index.html
+++ b/app/views/appeal/enforcement/index.html
@@ -28,14 +28,16 @@
     </p>
 
     {{ govukInsetText({
-      html: '<p class="govuk-body"><a href="#">Design board plans for this work</a></p>'
+      html: '<p class="govuk-body"><a href="https://app.mural.co/t/allpins6990/m/allpins6990/1749120110050/acce8963b62ade4f3e09bebd8cd2f320098d9984">Design board plans for this work</a></p>'
     }) }}
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'enforcement/v'+version+'/task-list',
+      href: 'full/v6/task-list',
       isStartButton: true
     }) }}
+
+    <p class="govuk-body"><a href="enforcement-2022/v8/task-list">Previous version</a></p>
 
   </div>
 </div>
