--- a/app/views/appeal/full/v6/prepare-appeal/supporting-check.html
+++ b/app/views/appeal/full/v6/prepare-appeal/supporting-check.html
@@ -1,4 +1,4 @@
-{% extends "_layouts/layout-main.html" %}
+{% extends '_layouts/layout-appellant-main.html' %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -59,5 +59,3 @@
     </div>
   </div>
 {% endblock %}
-
-{% block pageScripts %}{% endblock %}
