--- a/app/views/appeal/full/v6/task-list__prepare.html
+++ b/app/views/appeal/full/v6/task-list__prepare.html
@@ -29,7 +29,7 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/site-details/address" aria-describedby="site-details-hint site-details-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/address" aria-describedby="site-details-hint site-details-status">
           Site details
         </a>
         <div id="company-details-3-hint" class="govuk-task-list__hint">
@@ -56,7 +56,7 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/grounds/grounds" aria-describedby="your-application-hint your-application-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/grounds" aria-describedby="your-application-hint your-application-status">
           Grounds and facts
         </a>
         <div id="your-application-hint" class="govuk-task-list__hint">
