remove . from link

--- a/app/views/appeal/full/v6/task-list.html
+++ b/app/views/appeal/full/v6/task-list.html
@@ -33,7 +33,7 @@
       <p class="govuk-body">Your deadline to submit this appeal is {{ '6' | daysInFuture }}.</p>
 
       <p class="govuk-!-margin-bottom-0">
-        <a href="#0" class="govuk-link--no-visited-state">Save and come back later</a>.
+        <a href="#0" class="govuk-link--no-visited-state">Save and come back later</a>
       </p>
 
     </div>
