--- a/app/views/appeal/enforcement/index.html
+++ b/app/views/appeal/enforcement/index.html
@@ -33,7 +33,7 @@
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'full/v6/task-list',
+      href: 'enforcement/v2/task-list',
       isStartButton: true
     }) }}
 
