--- a/app/views/appeal/before-you-start/aad/index.html
+++ b/app/views/appeal/before-you-start/aad/index.html
@@ -8,22 +8,22 @@
 
   <ul class="govuk-list govuk-list--bullet">
     <li>
-      <a href="v2/successful/">Successful API call</a>
+      <a href="v3/successful/before-you-start">Successful API call: eligible</a>
     </li>
     <li>
-      <a href="v2/partial-success/">Partially successful API call</a>
+      <a href="v3/partial-success/before-you-start">Partially successful API call</a>
     </li>
     <li>
-      <a href="v2/not-eligible/">Not eligible</a>
+      <a href="v3/not-eligible/before-you-start">Successful API call: not eligible</a>
     </li>
     <li>
-      <a href="v2/application-not-found/">Failure – application not found</a>
+      <a href="v3/application-not-found/before-you-start">Failure: application not found</a>
     </li>
     <li>
-      <a href="v2/invalid-ref-error/ref-error">Failure – invalid reference number</a>
+      <a href="v3/invalid-ref-error/ref-error">Failure: invalid reference number</a>
     </li>
     <li>
-      <a href="v2/api-error/">Failure – API error (timeout, server error, etc.)</a>
+      <a href="v3/api-error/before-you-start">Failure: API error (timeout, server error, etc.)</a>
     </li>
   </ul>
 
